Refactor: migrate frontend portal to TypeScript, implement client API services, and update Java API config